console log separators
This is still a pure JS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <button onclick="chooseCard()">New Card</button>
     <button onclick="stopGame()">Enough</button>
+    <button onclick="stopGame()">Restart</button>
     <script src="app.js"></script>
 </body>
 </html>
