--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="cardImgs">
+        
+    </div>
     <button onclick="chooseCard()">New Card</button>
     <button onclick="stopGame()">Enough</button>
-    <button onclick="stopGame()">Restart</button>
+    <button onclick="location.reload()">Restart</button>
     <script src="app.js"></script>
 </body>
 </html>
